# vsn-tournament-manager

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: nextjs-nextra.yaml
database/: main.sql
docs/: .gitignore  next.config.js  package-lock.json  package.json  theme.config.tsx
docs/components/: Colors.tsx
docs/config/: constants.ts  useNextSeoProps.tsx
docs/pages/: _meta.json  authorization.mdx  database.mdx  index.mdx  routes.mdx
docs/pages/routes/: authentication.mdx  tournament.mdx
docs/pages/routes/tournament/: league.mdx  team.mdx
docs/pages/routes/tournament/league/: _meta.json  fixture.mdx  league-teams.mdx
src/: constants.rs  jwt_auth_handler.rs  main.rs  responses.rs
src/controllers/: authentication_controller.rs  fixture_controller.rs  league_controller.rs  mod.rs  team_controller.rs  tournament_controller.rs
src/models/: fixture.rs  league.rs  mod.rs  team.rs  tournament.rs  user.rs
src/services/: fixture_service.rs  league_service.rs  mod.rs  team_service.rs  tournament_service.rs  user_service.rs
src/test/: fixture_tests.rs  index.rs  league_tests.rs  mod.rs  team_tests.rs  tournament_tests.rs
src/test/utilities/: fixture_utilities.rs  league_utilities.rs  mod.rs  team_utilities.rs  tournament_utilities.rs
