[package]
name = "tournament"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.193"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "macros", "chrono" ] }
serde_json = "1.0.108"
bcrypt = "0.15"
jsonwebtoken = "9.2.0"
chrono = {version = "0.4.31", features = ["clock", "serde"]}
email_address = "0.2.4"
random-string = "1.0.1"
async-recursion = "1.0.5"
dotenvy = "0.15.7"